--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <body style="font-family:sans-serif">
 <header style="background-color:#a8057a">
     <h1 style="color:#fa05b5;text-align:center;font-size:40px"> KrabsCraft </h1>
-    <p style="text-align:center"><img src="https://media.istockphoto.com/id/1306252751/uk/%D0%B2%D0%B5%D0%BA%D1%82%D0%BE%D1%80%D0%BD%D1%96-%D0%B7%D0%BE%D0%B1%D1%80%D0%B0%D0%B6%D0%B5%D0%BD%D0%BD%D1%8F/%D0%BA%D1%80%D0%B0%D0%B1-%D1%8F%D0%BA-%D0%BC%D0%BE%D1%80%D1%81%D1%8C%D0%BA%D0%B0-%D1%82%D0%B2%D0%B0%D1%80%D0%B8%D0%BD%D0%B0-%D0%BF%D0%BB%D0%B0%D0%B2%D0%B0%D1%94-%D0%BF%D1%96%D0%B4%D0%B2%D0%BE%D0%B4%D0%BD%D0%B8%D0%B9-%D0%B2%D0%B5%D0%BA%D1%82%D0%BE%D1%80%D0%BD%D0%B8%D0%B9-%D1%96%D0%BB%D1%8E%D1%81%D1%82%D1%80%D0%B0%D1%86%D1%96%D1%97.jpg?s=612x612&w=0&k=20&c=k_KL8SCLuSgRmAs8SXTeYAYUefB8fX55-Zz-rARORiI="/></p>
+    <p style="text-align:center"><img src="https://media.istockphoto.com/id/1306252751/uk/%D0%B2%D0%B5%D0%BA%D1%82%D0%BE%D1%80%D0%BD%D1%96-%D0%B7%D0%BE%D0%B1%D1%80%D0%B0%D0%B6%D0%B5%D0%BD%D0%BD%D1%8F/%D0%BA%D1%80%D0%B0%D0%B1-%D1%8F%D0%BA-%D0%BC%D0%BE%D1%80%D1%81%D1%8C%D0%BA%D0%B0-%D1%82%D0%B2%D0%B0%D1%80%D0%B8%D0%BD%D0%B0-%D0%BF%D0%BB%D0%B0%D0%B2%D0%B0%D1%94-%D0%BF%D1%96%D0%B4%D0%B2%D0%BE%D0%B4%D0%BD%D0%B8%D0%B9-%D0%B2%D0%B5%D0%BA%D1%82%D0%BE%D1%80%D0%BD%D0%B8%D0%B9-%D1%96%D0%BB%D1%8E%D1%81%D1%82%D1%80%D0%B0%D1%86%D1%96%D1%97.jpg?s=612x612&w=0&k=20&c=k_KL8SCLuSgRmAs8SXTeYAYUefB8fX55-Zz-rARORiI="height="150px"/></p>
     </header>
     <main style="background-color:#8b84f0">
         <p style="color:#fa3e86">CrabsCraft це реалістичний симулятор по виживання краба в навколишньому середовищі, щоб не померти треба <i>збирати водорості</i> бо твій персонаж хоче їсти, також треба повсякчас <i>ходити до моря</i> та пити. У тебе є два варіанта житла - <b>затишне море</b> чи <b>небезпечний суходіл.</b> Також тобі треба будувати сім'ю щоб розмножуватися і виживати разом з ними.  </p>
@@ -11,7 +11,7 @@
         <img src="https://play.google.com/store/apps/details?id=com.RobotSquid.KingOfCrabs&hl=ru"/>
     </main>
         <footer style="background-color:#e702f7">
-            <p style="text-align:center">Нас можна знайти в соцмережах<br/><i style="color:#f7023b">instagram</i>та<i style="color:lighblue">telegram</i></p>
+            <p style="text-align:center">Нас можна знайти в соцмережах<br/><i style="color:#f7023b">instagram,</i>та<i style="color:lighblue">telegram</i></p>
             </footer>
     </body>
 </html>
