--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <img src="https://play.google.com/store/apps/details?id=com.RobotSquid.KingOfCrabs&hl=ru"/>
     </main>
         <footer style="background-color:#e702f7">
-            <p style="text-align:center">Нас можна знайти в соцмережах<br/><i style="color:#f7023b">instagram,</i>та<i style="color:lighblue">telegram</i></p>
+            <p style="text-align:center">Нас можна знайти в соцмережах<br/><i style="color:#f7023b">instagram,</i> та <i style="color:lightblue">telegram</i></p>
             </footer>
     </body>
 </html>
