--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     </header>
     <main style="background-color:#8b84f0">
         <p style="color:#fa3e86">CrabsCraft це реалістичний симулятор про виживання краба в навколишньому середовищі, щоб не померти треба <i>збирати водорості</i> бо твій персонаж хоче їсти, також треба повсякчас <i>ходити до моря</i> та пити. У тебе є два варіанта житла - <b>затишне море</b> чи <b>небезпечний суходіл.</b> Також тобі треба будувати сім'ю щоб розмножуватися і виживати разом з ними.  </p>
-        <img src="https://play.google.com/store/apps/details?id=com.CPZTApps.Crabsimulator&hl=uk"/>
-        <img src="https://play.google.com/store/apps/details?id=com.RobotSquid.KingOfCrabs&hl=ru"/>
+        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2F4pda.to%2F2024%2F04%2F25%2F427172%2Fmilyj_i_tseplyayuschij_neozhidanno_grubyj_kritiki_otsenili_soulslajk_pro_kraba%2F&psig=AOvVaw2WFSGSTuC6lwGj5AYJW9Wu&ust=1730037965069000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCJj7oO2brIkDFQAAAAAdAAAAABAE"/>
+        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fcubiq.ru%2Fanonsirovan-soulslayk-ekshen-another-crab-s-treasure-pro-kraba-puteshestvennika%2F&psig=AOvVaw2WFSGSTuC6lwGj5AYJW9Wu&ust=1730037965069000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCJj7oO2brIkDFQAAAAAdAAAAABAJ"/>
     </main>
         <footer style="background-color:#e702f7">
             <p style="text-align:center">Нас можна знайти в соцмережах<br/><i style="color:#f7023b">instagram,</i> та <i style="color:lightblue">telegram</i></p>
