--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </main>
         <footer style="background-color:#e702f7">
             <p style="text-align:center">Нас можна знайти в соцмережах<br/><i style="color:#f7023b">instagram,</i> та <i style="color:lightblue">telegram</i></p>
-           <a style="color:black" href="https://en.wikipedia.org/wiki/Crab">більше про крабів</a>
+           <a style="color:#f77474" href="https://en.wikipedia.org/wiki/Crab">більше про крабів</a>
             </footer>
     </body>
 </html>
