--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
        <h1 style="text-align:center">Яких хижаків треба остерігатися?</h1>
        <h3 style="text-align:center;font-size:"50px"">Чайка</h3>
        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSojWZnboKBeTvO-4DYvTcpwGpDOl-iTqcngQ&s"height="150px"/><p>Вона може забрати в тебе їжу, та зламати тобі пансир. </p>
+        <h3 style="text-align:center;font-size:"50px"">Альбатрос</h3>
+       <img src="https://www.google.com/imgres?q=%D0%B0%D0%BB%D1%8C%D0%B1%D0%B0%D1%82%D1%80%D0%BE%D1%81&imgurl=http%3A%2F%2Fvstlg.ru%2Fupload%2Fresize_cache%2Fiblock%2Fade%2F740_636_1980f303f1eb8620208426898759fca00%2Fadef4ad30ee1f4dc0e4b2a638000ff9d.JPG&imgrefurl=https%3A%2F%2Fvstlg.ru%2Fanimals%2Fstranstvuyushchiy_albatros%2F&docid=nSzWzazJfzWZHM&tbnid=O_q3lv9oH_Zt8M&vet=12ahUKEwjLiaCLhcCJAxWBhP0HHZgkCA8QM3oECHkQAA..i&w=740&h=636&hcb=2&ved=2ahUKEwjLiaCLhcCJAxWBhP0HHZgkCA8QM3oECHkQAA"height="150px"/><p>У альбатроса ще більше сили ніж у чайки. </p>
     </main>
         <footer style="background-color:#e702f7">
             <p style="text-align:center">Нас можна знайти в соцмережах<br/><i style="color:#f7023b">instagram,</i> та <i style="color:lightblue">telegram</i></p>
