--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
        <h3 style="text-align:center;font-size:"50px"">Чайка</h3>
        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSojWZnboKBeTvO-4DYvTcpwGpDOl-iTqcngQ&s"height="150px"/><p>Вона може забрати в тебе їжу, та зламати тобі пансир. </p>
         <h3 style="text-align:center;font-size:"50px"">Альбатрос</h3>
-       <img src="https://www.google.com/imgres?q=%D0%B0%D0%BB%D1%8C%D0%B1%D0%B0%D1%82%D1%80%D0%BE%D1%81&imgurl=http%3A%2F%2Fvstlg.ru%2Fupload%2Fresize_cache%2Fiblock%2Fade%2F740_636_1980f303f1eb8620208426898759fca00%2Fadef4ad30ee1f4dc0e4b2a638000ff9d.JPG&imgrefurl=https%3A%2F%2Fvstlg.ru%2Fanimals%2Fstranstvuyushchiy_albatros%2F&docid=nSzWzazJfzWZHM&tbnid=O_q3lv9oH_Zt8M&vet=12ahUKEwjLiaCLhcCJAxWBhP0HHZgkCA8QM3oECHkQAA..i&w=740&h=636&hcb=2&ved=2ahUKEwjLiaCLhcCJAxWBhP0HHZgkCA8QM3oECHkQAA"height="150px"/><p>У альбатроса ще більше сили ніж у чайки. </p>
+       <img src="https://www.google.com/imgres?q=%D0%B0%D0%BB%D1%8C%D0%B1%D0%B0%D1%82%D1%80%D0%BE%D1%81&imgurl=https%3A%2F%2Fupload.wikimedia.org%2Fwikipedia%2Fcommons%2Fthumb%2F2%2F2d%2FSouthern_Royal_Albatross_in_flight.jpg%2F800px-Southern_Royal_Albatross_in_flight.jpg&imgrefurl=https%3A%2F%2Fru.wikiquote.org%2Fwiki%2F%25D0%2590%25D0%25BB%25D1%258C%25D0%25B1%25D0%25B0%25D1%2582%25D1%2580%25D0%25BE%25D1%2581&docid=u5T8eMt-VyzavM&tbnid=nmWpQl_gcv0bOM&vet=12ahUKEwjLiaCLhcCJAxWBhP0HHZgkCA8QM3oECCQQAA..i&w=800&h=488&hcb=2&ved=2ahUKEwjLiaCLhcCJAxWBhP0HHZgkCA8QM3oECCQQAA"height="150px"/><p>У альбатроса ще більше сили ніж у чайки. </p>
     </main>
         <footer style="background-color:#e702f7">
             <p style="text-align:center">Нас можна знайти в соцмережах<br/><i style="color:#f7023b">instagram,</i> та <i style="color:lightblue">telegram</i></p>
