--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
        <h3 style="text-align:center;font-size:"50px"">Чайка</h3>
        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSojWZnboKBeTvO-4DYvTcpwGpDOl-iTqcngQ&s"height="150px"/><p>Вона може забрати в тебе їжу, та зламати тобі пансир. </p>
         <h3 style="text-align:center;font-size:"50px"">Альбатрос</h3>
-       <img src="https://www.google.com/imgres?q=%D0%B0%D0%BB%D1%8C%D0%B1%D0%B0%D1%82%D1%80%D0%BE%D1%81&imgurl=https%3A%2F%2Ffaunistics.com%2Fwp-content%2Fuploads%2F2021%2F10%2F2-3.jpg&imgrefurl=https%3A%2F%2Ffaunistics.com%2Falbatros%2F&docid=kvwdUSxP0zZx1M&tbnid=O_K_cgAseaL8DM&vet=12ahUKEwjJravgwMCJAxV9hf0HHaBTMkQ4ChAzegQIWxAA..i&w=1050&h=769&hcb=2&ved=2ahUKEwjJravgwMCJAxV9hf0HHaBTMkQ4ChAzegQIWxAA"height="150px"/><p>У альбатроса ще більше сили ніж у чайки. </p>
+       <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fi.pinimg.com%2F474x%2F07%2F19%2F27%2F0719270c7aed86e822372ceef15c2261.jpg&tbnid=xqeA46rf2782JM&vet=10CAQQxiAoA2oXChMImNjqxcLAiQMVAAAAAB0AAAAAEAc..i&imgrefurl=https%3A%2F%2Fru.pinterest.com%2Fpin%2F562738915952637083%2F&docid=mWR0SEH7rlADhM&w=429&h=657&itg=1&q=%D0%B0%D0%BB%D1%8C%D0%B1%D0%B0%D1%82%D1%80%D0%BE%D1%81&ved=0CAQQxiAoA2oXChMImNjqxcLAiQMVAAAAAB0AAAAAEAc"height="150px"/><p>У альбатроса ще більше сили ніж у чайки. </p>
     </main>
         <footer style="background-color:#e702f7">
             <p style="text-align:center">Нас можна знайти в соцмережах<br/><i style="color:#f7023b">instagram,</i> та <i style="color:lightblue">telegram</i></p>
