--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
     <body style="font-family:sans-serif;background-color:red">
 <header style="background-color:#a8057a">
     <h1 id="header" style="color:#fa05b5;text-align:center;font-size:"40px"> KrabsCraft </h1>
-   <a href="#header">Наш логотип</a>
-    <a href="#main1">Як грати?</a>
-    <a href="#main2">Яких хижаків треба остерігатися?</a>
-    <a href="#footer">В яких ми соцмережах?</a>
+  <p style="text-align:center;color:"#63f7f2""> <a href="#header">Наш логотип</a> <a href="#main1">Як грати?</a><a href="#main2">Яких хижаків треба остерігатися?</a><a href="#footer">В яких ми соцмережах?</a></p>
     <p style="text-align:center"><img src="https://media.istockphoto.com/id/1306252751/uk/%D0%B2%D0%B5%D0%BA%D1%82%D0%BE%D1%80%D0%BD%D1%96-%D0%B7%D0%BE%D0%B1%D1%80%D0%B0%D0%B6%D0%B5%D0%BD%D0%BD%D1%8F/%D0%BA%D1%80%D0%B0%D0%B1-%D1%8F%D0%BA-%D0%BC%D0%BE%D1%80%D1%81%D1%8C%D0%BA%D0%B0-%D1%82%D0%B2%D0%B0%D1%80%D0%B8%D0%BD%D0%B0-%D0%BF%D0%BB%D0%B0%D0%B2%D0%B0%D1%94-%D0%BF%D1%96%D0%B4%D0%B2%D0%BE%D0%B4%D0%BD%D0%B8%D0%B9-%D0%B2%D0%B5%D0%BA%D1%82%D0%BE%D1%80%D0%BD%D0%B8%D0%B9-%D1%96%D0%BB%D1%8E%D1%81%D1%82%D1%80%D0%B0%D1%86%D1%96%D1%97.jpg?s=612x612&w=0&k=20&c=k_KL8SCLuSgRmAs8SXTeYAYUefB8fX55-Zz-rARORiI="height="150px"/></p>
     </header>
     <main style="background-color:#8b84f0">
