--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
          <h3 style="text-align:center;font-size:"50px"">Припливи</h3>
        <img src="https://ua.izzi.digital/DOS/306705/datastore/21/publication/306705/pictures/2022/10/24/8621e35e5b45df5f3ca0d5ae4611785c_25_unit.jpg?v=1711394505"height="150px"/><p>Припливи можуть накрити твій дім. </p>
         <h3 style="text-align:center;font-size:"50px"">Відпливи</h3>
-       <img src="https://www.yachting.com/getmedia/a7e928dc-b68f-485f-b997-ef53ca743637/.aspx?"height="150px"/><p>Сильні відпливи може з моря зробити озеро. </p>
+       <img src="https://www.yachting.com/getmedia/a7e928dc-b68f-485f-b997-ef53ca743637/.aspx?"height="150px"/><p>Сильні відпливи можуть з моря зробити озеро. </p>
        <h3 style="text-align:center;font-size:"50px"">Риба Фугу</h3>
        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSP4PEzVxVnBxNglTaG0h9kulhzKXCAJLBJJw&s"height="150px"/><p>Фугу полює на дні моря на крабів. </p>
     </main>
